# Mates-for-LEDs

./: CMakeLists.txt  README.md
GfxPrimitives/: Canvas.cpp  Canvas.h  Circle.cpp  Circle.h  GfxCanvas.cpp  GfxCanvas.h  GfxPrimitive.cpp  GfxPrimitive.h  Line.cpp  Line.h  Pixel.cpp  Pixel.h  PixelMap.cpp  PixelMap.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Renderable.cpp  Renderable.h  Size.cpp  Size.h  Text.cpp  Text.h
GfxPrimitives/fonts/: font5x7.h
LedMatrix/: LedMatrix.cpp  LedMatrix.h  MatrixOptions.h  PixelLocator.cpp  PixelLocator.h  color_utils.cpp  color_utils.h
demoapp/: CMakeLists.txt
demoapp/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  helper.cpp  helper.h  test_Canvas.cpp  test_Circle.cpp  test_GfxCanvas.cpp  test_GfxPrimitive.cpp  test_Line.cpp  test_Pixel.cpp  test_PixelLocator.cpp  test_PixelMap.cpp  test_Rect.cpp  test_Text.cpp  test_color_utils.cpp
testapp/: CMakeLists.txt
testapp/main/: testapp.c
